crates/figue/tests/integration/snapshots/main__integration__subcommand_errors__subcommand_with_partial_input.snap
---
source: crates/figue/tests/integration/subcommand_errors.rs
assertion_line: 98
expression: "strip_ansi_escapes :: strip_str(& err.to_string())"
---
main init

USAGE:
    main init [OPTIONS] <NAME> <DESCRIPTION>

ARGUMENTS:
        <NAME>
            Project name
        <DESCRIPTION>
            Project description

OPTIONS:
    -h, --help
            Show help message and exit.
        --html-help
            Open HTML help in the browser and exit.
    -V, --version
            Show version and exit.
        --completions <bash,zsh,fish>
            Generate shell completions.
        --export-jsonschemas <DIR>
            Export JSON Schema files for all config roots.


Error: missing required argument
   ╭─[ <usage>:1:16 ]
   │
 1 │ init myproject <description>
   │                ──────┬──────  
   │                      ╰──────── Project description
───╯
